fix(Button): fix icon alignment for small/large circle variant
Fixes INSTUI-928

Test plan:
- navigate to button component
- within the "Buttons with icons" section add size="small" and/
  or size="large" to the two circle variant examples... ensure
  the icon remains centered at the smaller and larger size

Reviewed-on: https://gerrit.instructure.com/137477
Tested-by: Jenkins
Product-Review: Ken Meleta <kmeleta@instructure.com>
QA-Review: Dan Sasaki <dsasaki@instructure.com>

--- a/packages/ui-core/src/components/Button/styles.css
+++ b/packages/ui-core/src/components/Button/styles.css
@@ -402,9 +402,10 @@
   }
 
   .content {
-    display: inline-block;
-    vertical-align: middle;
-    line-height: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
   }
 }
 
