--- a/packages/ui-core/src/components/SVGIcon/styles.css
+++ b/packages/ui-core/src/components/SVGIcon/styles.css
@@ -1,6 +1,9 @@
 .root {
   color: inherit;
   fill: currentColor;
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 1;
 }
 
 .rotate--90 {
